Updates for jdk11